--- a/index.html
+++ b/index.html
@@ -272,7 +272,11 @@
                 body: JSON.stringify({ prompt: prompt })
             });
 
-            if (!response.ok) return;
+            if (!response.ok){
+                console.debug("No response")
+                return;
+            }
+                
 
             const result = await response.json();
             if (result.candidates && result.candidates[0]?.content?.parts?.[0]) {
