--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
                     appendMessage(formattedMessage, sender);
                 }
             });
+            Prism.highlightAll();
         };
 
         function appendMessage(message, sender) {
