--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
             overflow-x: auto;
             margin: 0.75em 0;
             font-size: 0.9em;
+            white-space: pre-wrap;
+            word-break: break-all;
         }
 
         .bot-bubble code {
