--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 </div>
         </aside>
 
-        <div class="flex-1 flex flex-col min-w-0">
+        <div class="flex-1 flex flex-col">
             <header class="bg-gray-800 p-4 flex items-center justify-center border-b border-gray-700">
                 <div class="w-full max-w-4xl flex items-center justify-between">
                     <button id="menu-btn" class="md:hidden text-white mr-4">
