--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
             padding: 1rem;
             border-radius: 0.5rem;
             margin: 1em 0;
-            white-space: pre-wrap;
-            word-wrap: break-word;
+            white-space: pre; /* Change from pre-wrap */
+            overflow-x: auto; /* Add this for scrolling */
+            word-wrap: normal;  /* Change from break-word */
         }
 
         .history-item .delete-btn {
@@ -235,6 +236,12 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/toolbar/prism-toolbar.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js"></script>
+
     <script src="js/main.js"></script>
 
 </body>
